2009-06-01  Dominique Dumont  <domi.dumont@free.fr> v0.637 (unreleased)

	* lib/Config/Model/Value.pm: As suggested by Jonas Smedegaard,
	replaced 'built_in' parameter by 'builtin_default' and 'default'
	by 'configfile_default'.

2009-05-30  Dominique Dumont  <dominique.dumont@hp.com> v0.636

	* lib/Config/Model/AutoRead.pm: Added skip_open to avoid opening
	config target file when the open must be done by the
	backend (e.g. for Augeas backend)

	* lib/Config/Model.pm (instance): name parameter is no longer
	mandatory. Uses 'default' as default instance name.

2009-05-13  Dominique Dumont  <dominique.dumont@hp.com> 

	* lib/Config/Model/AutoRead.pm: When calling backend, 'file'
	parameter contains configuration file name without path and
	'file_path' parameter contains complete path and file name

2009-04-17  Dominique Dumont  <dominique.dumont@hp.com> v0.635

	* config-edit: added -dumptype option. -dump can now be used to
	specify a file name

	* lib/Config/Model/Instance.pm (new): Added skip_read parameter

	* lib/Config/Model/Node.pm (new): Added skip_read parameter

2009-04-15  Dominique Dumont  <dominique.dumont@hp.com>

	* config-edit: Fix broken Log4Perl default config. Added -load option

2009-04-11  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/AutoRead.pm (): Reworked doc. Aligned read and
	write specs (now have same parameters). Read and write callback
	are passed an opened file handle if possible. Now use Log::Log4perl.

2009-04-02  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model.pm (include_one_class): Can no longer clobber
	element with 'include' class feature.

2009-03-30  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model.pm (check_class_parameters): Accept summary
	parameter. Summary is optional and will be used either to generate
	user interface or may be used to provide comments in saved
	configuration files.

	* lib/Config/Model/Node.pm (get_help): added options to get either