@@ -1,4 +1,9 @@
-2009-06-01  Dominique Dumont  <domi.dumont@free.fr> v0.637 (unreleased)
+2009-06-02  Dominique Dumont  <dominique.dumont@hp.com> v0.637 (unreleased)
+
+	* lib/Config/Model/Value.pm: use Log::Log4perl with categories
+	Tree::Element::Value and Tree::Element::Warper
+
+2009-06-01  Dominique Dumont  <domi.dumont@free.fr>
 
 	* lib/Config/Model/Value.pm: As suggested by Jonas Smedegaard,
 	replaced 'built_in' parameter by 'builtin_default' and 'default'
